--- a/www/reservations.html
+++ b/www/reservations.html
@@ -33,6 +33,7 @@
 			<li class="isChef pChef"><a class="sub" data-bind="text: lang.ChefProfile" href="chef-profile-edit.html"></a></li>
 			<li class="isChef"><a class="sub" data-bind="text: lang.ManageDishes" href="chef-dishes.html"></a></li>
 			<li class="isChef"><a class="sub" data-bind="text: lang.Schedule" href="chef-calendar-set.html"></a></li>
+			<li class="isChef"><a class="sub" data-bind="text: lang.DeliverySchedule" href="delivery-schedule.html"></a></li>
 			<li class="isChef"><a class="sub" data-bind="text: lang.ChefReservations" href="chef-reservations.html"></a></li>
 			
 			<li><a  href="settings.html" data-bind="text: lang.Settings"></a></li>
@@ -195,9 +196,13 @@ $(document).ready(function(e) {
 		}
 		var H = '<h4>'+cLan.To+',</h4><strong>'+thisOrder.company+'</strong><br />'+thisOrder.address+'<br />'+thisOrder.city+' '+thisOrder.state+', '+thisOrder.zip+'<br />'+thisOrder.phone+'<br />';
 		H += '<h4>'+cLan.Detail+' :</h4>';
-		H += cLan.OrderId+' : '+ resData[i].id +' &nbsp; &nbsp; '+cLan.Persons+' : '+ resData[i].persons +' <br />' ;
+		H += cLan.OrderId+' : '+ thisOrder.id +' &nbsp; &nbsp; ';
+		if(thisOrder.order_type=='Dine'){
+			H += cLan.Persons+' : '+ thisOrder.persons +' <br />' ;
+		}
+		H += cLan.Ordertype+' : '+ thisOrder.order_type +'<br />' ;		
 		H += cLan.Ordertotal+' : $'+ thisOrder.order_total +'<br />' ;
-		H += cLan.Paymentstatus+' : <strong>'+resData[i].status+'</strong><br />';
+		H += cLan.Paymentstatus+' : <strong>'+thisOrder.status+'</strong><br />';
 		
 		var mo = moment( thisOrder.order_date+' '+thisOrder.order_time, 'YYYY-MM-DD HH:mm:ss' );
 		H += cLan.Time+' : '+ mo.format('MM/DD/YYYY') +' &nbsp; '+ mo.format('HH:mm A') +'<br />';
@@ -317,7 +322,7 @@ function loadReservations(){
 					$copy.find('div.byChef').html( '<button class="btn btn-default btn-sm btnDetail" data-id="'+resData[i].id+'">'+cLan.OrderDetails+'</button>'  );
 					
 					var H = '';
-					
+					H += cLan.Ordertype+' : '+ resData[i].order_type +'<br />' ;
 					H += cLan.Ordertotal+' : $'+ parseFloat(resData[i].order_total).toFixed(2) +'<br />' ;
 					H += cLan.Paymentstatus+' : <strong>'+resData[i].status+'</strong>';
 					if( resData[i].status == 'Paid' ){
