--- a/www/chef-dishes.html
+++ b/www/chef-dishes.html
@@ -47,14 +47,14 @@
 		<p class="pageTitle" data-bind="text: lang.ManageD"></p>
 		</h1>
 		<h2>
-			<button class="btn btn-xs btn-primary pull-right btnShowAdd"><i class="fa fa-plus-circle"></i> <span data-bind="text: lang.AddNew"></span></button>
+			<button class="btn btn-sm btn-primary pull-right btnShowAdd"><i class="fa fa-plus-circle"></i> <span data-bind="text: lang.AddNew"></span></button>
 		</h2>
 		<div id="chef-foods">
 			<div class="food-listing hidden">
 				<div class="food-image-cont"> <img class="img-responsive img-circle media-object pull-left" src="images/food-1.png" align="food img"></div>
 				<div class="food-info-cont">
 					<div class="food-info-body"> <a class="dishTitle" href="#">..</a>
-						<button data-dish="0" class="btn btn-xs btn-warning btnEdit" data-bind="text: lang.Edit"></button>
+						<button data-dish="0" class="btn btn-sm btn-warning btnEdit" data-bind="text: lang.Edit"></button>
 						<br />
 						<p class="dishInfo"></p>
 						<img src="images/0.gif" alt="" class="rating" /> <span class="rating_info"></span> </div>
