--- a/www/chef_profile.html
+++ b/www/chef_profile.html
@@ -234,7 +234,7 @@
 						<div class="form-group">
 							<label _data-bind="text: lang.Time">Additional delivery info <span class="small">(such as Apt or Suite)</span> </label>
 							<div class="">
-								<input type="text" name="d_address" id="d_address" class="form-control required" />
+								<textarea name="d_address" id="d_address" class="form-control" rows="2"></textarea>
 							</div>
 						</div>
 						<div class="form-group">
