--- a/www/map.html
+++ b/www/map.html
@@ -326,7 +326,7 @@ function DineControl(controlDiv, map) { // center
 	controlText.style.lineHeight = '30px';
 	controlText.style.paddingLeft = '8px';
 	controlText.style.paddingRight = '8px';
-	controlText.innerHTML = 'Dine';
+	controlText.innerHTML = 'Dine In';
 	controlUI.appendChild(controlText);
 	
 	// Setup the click event listeners: simply set the map to Chicago.
