--- a/www/about.html
+++ b/www/about.html
@@ -19,7 +19,7 @@
 <div id="sidebar-wrapper">
 	<nav id="nav">
 		<ul class="sidebar-nav nav" id="navRight">
-			<li class="menu-heading"><strong><a href="#" data-bind="text: lang.Fudi"></a></strong></li>
+			<li class="menu-heading"><strong><a href="#" data-bind="text: lang.Foodie"></a></strong></li>
 			<li><a class="sub" href="map.html" data-bind="text: lang.Chefs"></a></li>
 			<li><a class="sub" href="user-profile.html" data-bind="text: lang.MyProfile"></a></li>
 			<li><a class="sub" href="reservations.html" data-bind="text: lang.MyOrders"></a></li>
@@ -43,7 +43,7 @@
 	<h1 id="menu-button"> <a id="menu-toggle" href="#" class="btn-menu toggle"> <i class="fa fa-bars"></i> </a> </h1>
 	<p class="pageTitle" data-bind="text: lang.AboutFudi"></p>
 	<div class="container">
-	<h4>Version — 1.3.5</h4>
+	<h4>Version — 1.4.0</h4>
 	<br />
 	Copyright &copy; 2016 Fudi Systems, Inc.
 	</div>
