--- a/www/map.html
+++ b/www/map.html
@@ -89,7 +89,7 @@ html, body {
 <div id="sidebar-wrapper">
 	<nav id="nav">
 		<ul class="sidebar-nav nav" id="navRight">
-			<li class="menu-heading"><strong><a href="#" data-bind="text: lang.Fudi"></a></strong></li>
+			<li class="menu-heading"><strong><a href="#" data-bind="text: lang.Foodie"></a></strong></li>
 			<li><a class="sub" href="map.html" data-bind="text: lang.Chefs"></a></li>
 			<li><a class="sub" href="user-profile.html" data-bind="text: lang.MyProfile"></a></li>
 			<li><a class="sub" href="reservations.html" data-bind="text: lang.MyOrders"></a></li>
