--- a/www/chef-profile-edit.html
+++ b/www/chef-profile-edit.html
@@ -146,7 +146,7 @@
 		</div>
 		
 		<div class="form-group">
-			<label data-bind="text: lang.FirstName">Seating Capacity</label>
+			<label data-bind="text: lang.SeatingCapacity">Seating Capacity</label>
 			<input class="form-control required" type="number" name="capacity" value="" id="capacity" >
 		</div>
 		
